# yaml-unscrambler

./: .travis.yml  Makefile  build.bash  deyamlify.cabal  sample.yaml  stack.yaml  yaml-unscrambler.cabal
.github/workflows/: ci.yaml  release.yaml  verify.yaml
refs/: parsing.hs  unparsable.yaml
test/: Main.hs
