name: deyamlify
version: 0.1
synopsis: Industrial strength declarative YAML parsing toolkit
homepage: https://github.com/nikita-volkov/deyamlify
bug-reports: https://github.com/nikita-volkov/deyamlify/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/deyamlify.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Deyamlify.Dsl
    Deyamlify.Expectations
  other-modules:
    Deyamlify.AsciiAtto
    Deyamlify.Model
    Deyamlify.Prelude
    Deyamlify.Util.ByteString
    Deyamlify.Util.Maybe
    Deyamlify.Util.HashMap
    Deyamlify.Util.List
    Deyamlify.Util.Yaml
    Deyamlify.Util.Word8
    Deyamlify.Util.Text
    Deyamlify.Util.TextAttoparsec
    Deyamlify.YamlValueParser
  build-depends:
    aeson >=1 && <2,
    attoparsec >=0.13 && <0.14,
    attoparsec-data >=1.0.4 && <1.1,
    attoparsec-time >=1.0.1.1 && <1.1,
    base >=4.11 && <5,
    base64 >=0.4.2.2 && <0.5,
    bytestring >=0.10 && <0.11,
    conduit >=1.3.2 && <1.4,
    containers >=0.6.2 && <0.7,
    foldl >=1.4 && <2,
    hashable >=1 && <2,
    libyaml >=0.1.2 && <0.2,
    megaparsec >=9.0 && <10,
    mtl >=2.2 && <3,
    scientific >=0.3.6.2 && <0.4,
    selective >=0.4 && <0.5,
    text >=1 && <2,
    time >=1.9 && <2,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2.10 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.12 && <0.13,
    yaml >=0.11.5 && <0.12
